# speex

./: .gitignore  README.md
speex-1.2.0/speex-1.2.0/: README
speex_android/: .gitignore  .project
speex_android/app/: CMakeLists.txt  build.gradle
speex_android/app/jni/: Android.mk  speex_jni.cpp
speex_android/app/src/main/: AndroidManifest.xml
speex_android/app/src/main/cpp/: native-lib.cpp
speex_android/app/src/main/java/com/audio/: Speex.java
speex_android/app/src/main/java/com/speex/util/: AudioFileUtils.java  AudioRecordUtils.java  ErrorCode.java  PlayerUtils.java  ShortByteUtil.java
speex_android/app/src/main/java/com/speex/zhouzhoufamily/speex_android/: MainActivity.java
speex_android/app/src/main/java/com/zhouzhoufamily/speex_android/: MainActivity.java
speex_android/app/src/main/res/layout/: activity_main.xml
speex_android/app/src/main/res/values/: strings.xml
speex_android/gradle/wrapper/: gradle-wrapper.properties
speex_win/: .gitignore
speex_win/include/speex/: speex_config_types.h
speex_win/libspeex/: testenc.c  testenc.c.rej
speex_win/win32/Resources/: test.speex  test.spx
speex_win/win32/VS2015/: libspeex.sln
speex_win/win32/VS2015/libspeex/: libspeex.vcxproj  libspeex.vcxproj.filters
speex_win/win32/VS2015/libspeexdsp/: libspeexdsp.vcxproj  libspeexdsp.vcxproj.filters
speex_win/win32/VS2015/ogg/: libogg_dynamic.vcxproj  libogg_static.vcxproj
speex_win/win32/VS2015/speexdec/: speexdec.vcproj  speexdec.vcxproj
speex_win/win32/VS2015/speexenc/: speexenc.vcproj  speexenc.vcxproj
speex_win/win32/VS2015/tests/: resource.h  testdenoise.vcxproj  testecho.vcxproj  testenc.aps  testenc.vcproj  testenc.vcxproj  testenc.vcxproj.filters  testenc_uwb.vcxproj  testenc_wb.vcxproj  testresample.vcxproj
